src/test/deca/avecObjet/valid/method_call_on_new_object copy.deca
// Description :
//    Appel de méthode sur un objet créé avec new.
//
// Resultats :
//    OK

class A {
    int f() {
        return 1;
    }
}

{
    println((new A()).f());
}

