src/test/deca/avecObjet/invalid/return_in_void_method_value.deca
// Description :
//    Instruction return avec valeur dans une méthode void.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    void f() {
        return 1;
    }
}

{
}

